# lightlang

./: ChangeLog  LanguageStandards.md  LightLangScreenshots.md  PKG-INFO  ProjectHome.md  README  SLogScreenshots.md  SlogRoadMap.md  Source.md  VimSyntaxHighlighting.md  setup.py  slog.spec
converter/: HELP  README  ac.sh  configure.in  dummy2lightlang.pl
converter/dictconv-0.2/src/: Makefile.am  babylon.cpp  babylon.h  dictbuilder.h  dictconv.cpp  dictdbuilder.h  freedictreader.cpp  plaintextdictbuilder.cpp  sdict.h  sdictreader.h  stardict.h
data/: slog.glade
lib/: htmltextview.py
lightlang-editor/: lileditor.pro  (+1 more)
trunk/converter/dictconv-0.2/src/: Makefile.am  babylon.cpp  babylon.h  babylonreader.cpp  babylonreader.h  dictbuilder.h  dictdbuilder.cpp  plaintextdictbuilder.cpp  plaintextdictbuilder.h  stardictbuilder.cpp  stardictreader.cpp
trunk/converter/dictconv-CX-0.2.1/src/: CMakeLists.txt  Makefile.in  babylon.cpp  babylon.h  babylonreader.cpp  dictconv.cpp  dictreader.h
trunk/lightlang/: Makefile.in  configure  configure.in  download.py.in  info  lightlang.spec
trunk/lightlang/apps/: Makefile.in
trunk/lightlang/apps/llrepo/: Makefile.in
trunk/lightlang/apps/llrepo/src/: llrepo.py.in  repos.py
trunk/lightlang/apps/sl/: Makefile.in
trunk/lightlang/apps/sl/src/: config.h.in  const.h  find.c  find.h  help.c  help.h  info.c  info.h  linear_index.c  linear_index.h  main.c  managed_search.c  managed_search.h  manager.c  manager.h  mstring.c  mstring.h  options.c  options.h  search.c  search.h  search_output.c  search_output.h  search_output_html.c  search_output_html.h  search_output_native.c  search_output_native.h  search_output_text.c  search_output_text.h  settings.c  settings.h  string.c  string.h
trunk/lightlang/apps/sl/src/cs/: const.h  find.c  find.h  info.c  main.c  settings.c  settings.h
trunk/lightlang/apps/xsl/: Makefile.in
trunk/lightlang/apps/xsl/src/desktop/: xsl.desktop
trunk/lightlang/apps/xsl/src/ifa/: llrepo.xml.in
trunk/lightlang/apps/xsl/src/pyqt4/: About.py  AboutWindow.py  Application.py  CenteredWindow.py  ChromeScrollBar.py  Config.py.in  Const.py  DictInfoWindow.py  DictInformationWindow.py  DictsListWidget.py  DictsListWidgetItem.py  DictsManager.py  DictsManagerWindow.py  EntitledMenu.py  Error.py  EventSniffer.py  FictiveButtonEventFilter.py  FindInSLPanel.py  FindInSlPanel.py  FindInTextFrame.py  FindSoundInSL.py  FindSoundInSl.py  FindWordInSL.py  FindWordInSl.py  Global.py  GoogleTranslate.py  GoogleTranslateLangsList.py  GoogleTranslatePanel.py  Help.py  HelpBrowser.py  HelpBrowserWindow.py  HistoryPanel.py  IFAMenu.py  IFASAXHandler.py  IconsLoader.py  IfaMenu.py  IfaSaxHandler.py  InternetLinksMenu.py  KeyboardModifierMenu.py  KeyboardModifiers.py  (+47 more)
trunk/lightlang/apps/xsl/src/src/: Config.py.in  DictsListWidget.py  DictsListWidgetItem.py  EntitledMenu.py  HistoryPanel.py  HorizontalGrabWidget.py  IfaMenu.py  InternetLinksMenu.py  KeysGrabberThread.py  Main.py  MainWindow.py  SlDictsInfoLoader.py  SlListBrowser.py  SlSearchPanel.py  SlSoundSearch.py  StartupLock.py  TextBrowser.py  TextEdit.py  TranslateBrowser.py  TranslateSitesMenu.py  TrayIcon.py  UserStyleCss.py  UserStyleCssCollection.py
trunk/lightlang/apps/xsl/src/tr/: ru.qm  ru.ts
trunk/lightlang/apps/xsl/src/trsites/: altavista-translate.xml
trunk/lightlang/apps/xsl/src/xsl/: AboutWindow.py  ChromeScrollBar.py  Const.py  DictInfoWindow.py  DictsListWidget.py  DictsListWidgetItem.py  DictsManagerWindow.py  EntitledMenu.py  FictiveButtonEventFilter.py  GoogleTranslate.py  GoogleTranslatePanel.py  HelpBrowserWindow.py  HistoryPanel.py  HorizontalGrabWidget.py  IconsLoader.py  IfaMenu.py  IfaSaxHandler.py  InternetLinksMenu.py  KeyboardModifiersTest.py  KeysGrabberThread.py  LangsList.py  LineEdit.py  ListBrowser.py  Locale.py  Main.py  MainApplication.py  MainWindow.py  MouseButtonsTest.py  MouseSelector.py  PopupWindow.py  RadioButtonsMenu.py  Settings.py  SlDictsInfoLoader.py  SlListBrowser.py  SlSearchPanel.py  SlSoundSearch.py  SlWordSearch.py  SpyMenu.py  StartupLock.py  StatusBar.py  (+14 more)
trunk/lightlang/autom4te.cache/: output.0  requests  traces.0
trunk/lightlang/docs/: Makefile.in
trunk/lightlang/docs/html/: Makefile.in
trunk/lightlang/docs/html/en/: Makefile.in
trunk/lightlang/docs/html/en/html/: about.html  bugs.html  common_installation_and_configuration.html  common_introduction.html  common_license.html  common_new_features.html  index.html  license.html  ll_en_doc.webprj  llrepo_usage.html  new.html  repo.html  sl_console_usage.html  tags.html  xsl_command_line_options.html  xsl_google_translate_panel.html  xsl_ifa.html  xsl_pages_menu.html  xsl_trsites.html
trunk/lightlang/docs/html/ru/: Makefile.in
trunk/lightlang/docs/html/ru/html/: bugs.html  common_authors.html  common_installation_and_configuration.html  common_internet.html  common_new_features.html  config.html  console.html  gui.html  ifa.html  index.html  ll_ru_doc.session  ll_ru_doc.webprj  llrepo_configuring.html  llrepo_usage.html  new.html  sl_console_usage.html  xsl_features.html  xsl_find_in_sl_panel.html  xsl_help_menu.html  xsl_history_panel.html  xsl_spy_menu.html  xsl_text_browser.html  xsl_tools_menu.html  xsl_tray_icon.html  xsl_view_menu.html
trunk/lightlang/docs/man/: Makefile.in
trunk/lightlang/docs/man/en/: Makefile.in
trunk/lightlang/docs/man/en/man/: llrepo.1  sl.1  xsl.1
trunk/lightlang/docs/man/ru/: Makefile.in
trunk/lightlang/docs/man/ru/man/: llrepo.1  sl.1  xsl.1
trunk/lightlang/docs/text/: Makefile.in
trunk/lightlang/docs/text/en/: Makefile.in
trunk/lightlang/docs/text/en/text/: INSTALL  README  VERSION
trunk/lightlang/docs/text/ru/: Makefile.in
trunk/lightlang/docs/text/ru/text/: INSTALL  README  VERSION
trunk/lightlang/pkg/: Makefile.in
trunk/lightlang/pkg/pkg/: lightlang.pc.in
trunk/lightlang/readme/: INSTALL.EN  INSTALL.RU  LICENSE  README.EN  README.RU  VERSION.EN  VERSION.RU
trunk/lightlang/resources/: Makefile.in
trunk/lightlang/resources/dicts/: Makefile.in
trunk/lightlang/resources/sounds/: Makefile.in
(+422 files in other folders)
